# Lively

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dev.bat  dev.ps1
docs/: architecture.md  compiler_deep_dive.md  language_spec.md
examples/: fibonacci.lv  hello.lv  lively.lv  loop_test.lv  my_program.lv
examples/errors/: type_mismatch.lv  undeclared.lv
src/: main.cpp
src/ast/: ast.h  ast_printer.h
src/bytecode/: bytecode.h  bytecode_generator.cpp  bytecode_generator.h
src/ir/: tac.h  tac_generator.cpp  tac_generator.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h
src/semantic/: semantic.cpp  semantic.h
src/vm/: vm.cpp  vm.h
tests/: vm_tests.cpp
